get data quietly done

--- a/WebContent/004-get-patient-data-quietly/index.html
+++ b/WebContent/004-get-patient-data-quietly/index.html
@@ -6,6 +6,10 @@
 		<!-- title -->
 		<title>SMART on FHIR Example Application (index.html)</title>
 
+		<!-- favico -->
+		<link rel="shortcut icon" href="/smart-on-fhir-examples/static/img/icon/nachc-favico.png">
+		<link rel="icon" href="/smart-on-fhir-examples/static/img/icon/nachc-favico.png">
+
 		<!-- css -->
 		<link rel='stylesheet' type='text/css' href='/smart-on-fhir-examples/static/css/smart-on-fhir-examples.css'>
 
