--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,5 +9,7 @@
 		Other examples include:
 		<br/>
 		<a href="http://localhost:8080/smart-on-fhir-examples/001-hello-world/launch.html">http://localhost:8080/smart-on-fhir-examples/001-hello-world/launch.html</a>
+		<br/>
+		<a href="http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html">http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html</a>
 	</p>
 </html>
