--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,5 +11,7 @@
 		<a href="http://localhost:8080/smart-on-fhir-examples/001-hello-world/launch.html">http://localhost:8080/smart-on-fhir-examples/001-hello-world/launch.html</a>
 		<br/>
 		<a href="http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html">http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html</a>
+		<br/>
+		<a href="http://localhost:8080/smart-on-fhir-examples/003-get-patient-data/launch.html">http://localhost:8080/smart-on-fhir-examples/003-get-patient-data/launch.html</a>
 	</p>
 </html>
