--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,5 +13,7 @@
 		<a href="http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html">http://localhost:8080/smart-on-fhir-examples/002-authenticate/launch.html</a>
 		<br/>
 		<a href="http://localhost:8080/smart-on-fhir-examples/003-get-patient-data/launch.html">http://localhost:8080/smart-on-fhir-examples/003-get-patient-data/launch.html</a>
+		<br/>
+		<a href="http://localhost:8080/smart-on-fhir-examples/004-get-patient-data-quietly/launch.html">http://localhost:8080/smart-on-fhir-examples/004-get-patient-data-quietly/launch.html</a>
 	</p>
 </html>
