--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,4 +16,9 @@
 		<br/>
 		<a href="http://localhost:8080/smart-on-fhir-examples/004-get-patient-data-quietly/launch.html">http://localhost:8080/smart-on-fhir-examples/004-get-patient-data-quietly/launch.html</a>
 	</p>
+	<br/><br/>
+	<p>
+		<h2>Other Useful Links</h2>
+		Smart App Launcher: <a href="https://launch.smarthealthit.org/">https://launch.smarthealthit.org/</a>
+	</p>
 </html>
